# deac-cpp

./: .bumpversion.cfg  LICENSE  README.md
src/: CMakeLists.txt
src/deac/: CMakeLists.txt
src/deac/include/: argparse.hpp  common_gpu.hpp  deac_debug.h  deac_gpu.cuh  deac_gpu.hip.hpp  deac_gpu.sycl.h  fs.h  rng.hpp
src/deac/src/: deac.cpp  deac_gpu.cu  gen_doubles.py  gen_isf_data.py  load_numpy_data.cpp  print_isf_npz.py
test/: deac_commands  deac_parity_test.py  deac_smoke_test.py  tso_dsf.npz  tso_isf_large_M00064.npz  tso_isf_small_M00064.npz  tso_isf_small_M16384.npz
tools/: convert_isf_data.py  generate_commands.sh  plot_simple_average_deac_results.py
tools/uuid/: uuid.cpp
